# fbar_prep

./: Cargo.toml  readme.md
demo_data/: data.yml
facts/: years.yml
src/: data.rs  main.rs
src/data/: account.rs  mod.rs  provider.rs  user_data_deserializer.rs
src/facts/: exchange_rate.rs  mod.rs
src/report_context/: converter.rs  mod.rs
